<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_drawer_item_myprofile"
        android:icon="@drawable/ic_person"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/menu_drawer_item_my_pets"
        android:icon="@drawable/ic_stars_black_24dp"
        android:title="@string/my_pets" />
    <item android:title="@string/shortcuts">
        <menu>
            <item
                android:id="@+id/menu_drawer_item_register_pet"
                android:icon="@drawable/ic_add_circle_outline_black_24dp"
                android:title="@string/register_pet" />
            <item
                android:id="@+id/menu_drawer_item_adotar_pet"
                android:icon="@drawable/ic_insert_emoticon_black_24dp"
                android:title="@string/adopter_pet" />
        </menu>
    </item>
</menu>