<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cad_pessoa_CL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroPessoalActivity">

    <include
        android:id="@+id/cad_pessoa_toolbar"
        layout="@layout/template_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <ScrollView
        android:id="@+id/cad_pessoa_parent_SV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cad_pessoa_toolbar" >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cad_pessoa_child_CL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <LinearLayout
                android:id="@+id/cad_pessoa_child_LL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/cad_pessoa_txt_info"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/colorSecondary"
                    android:gravity="center"
                    android:text="@string/cad_pessoa_txt_info"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/cad_pessoa_txt_infopessoa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/cad_pessoa_txt_infopessoa"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSecondaryDark" />

                <EditText
                    android:id="@+id/cad_pessoa_edit_nomecompleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/cad_pessoa_nomecompleto"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/colorHintText"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/cad_pessoa_edit_idade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/cad_pessoa_idade"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColorHint="@color/colorHintText"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/cad_pessoa_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/cad_pessoa_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorHintText"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/cad_pessoa_edit_UF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/cad_pessoa_uf"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="@color/colorHintText"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/cad_pessoa_edit_cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/cad_pessoa_cidade"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="@color/colorHintText"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/cad_pessoa_edit_endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/cad_pessoa_endereco"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="@color/colorHintText"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/cad_pessoa_edit_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/cad_pessoa_telefone"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:textColorHint="@color/colorHintText"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/cad_pessoa_txt_infoperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/cad_pessoa_infoperfil"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSecondaryDark" />

                <EditText
                    android:id="@+id/cad_pessoa_edit_nomeusuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="@string/afh_username"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:textColorHint="@color/colorHintText"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/cad_pessoa_edit_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="@string/afh_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorHintText"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/cad_pessoa_edit_confsenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autofillHints="@string/afh_password"
                    android:hint="@string/cad_pessoa_confsenha"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorHintText"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/cad_pessoa_txt_fotoperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/cad_pessoa_fotoperfil"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSecondaryDark" />

                <Button
                    android:id="@+id/cad_pessoa_btn_fotoperfil"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="#e6e7e7"
                    android:drawableTop="@android:drawable/ic_menu_add"
                    android:drawableTint="@color/colorGrayBtnText"
                    android:fontFamily="@font/roboto"
                    android:paddingTop="20dp"
                    android:text="@string/adicionar_fotos"
                    android:textColor="@color/colorGrayBtnText" />
            </LinearLayout>

            <Button
                android:id="@+id/cad_pessoa_btn_fazercadastro"
                style="@style/AppThemeBlue.ButtonMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/cad_pessoa_fazercadastro"
                android:textColor="@color/colorTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cad_pessoa_child_LL" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>