<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".InitActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/colorTitle" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="@string/hello"
                    android:textColor="@color/colorPrimary"
                    android:textSize="72sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/init_btn_cadastrar_animal"
                    style="@style/AppTheme.ButtonMain"
                    android:text="@string/register_animal"
                    android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@id/bt_main_adopt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Button
                    android:id="@+id/bt_main_login"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:text="@string/login"
                    app:layout_constraintTop_toBottomOf="@id/init_btn_cadastrar_animal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/description_main"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Button
                    android:id="@+id/bt_main_adopt"
                    style="@style/AppTheme.ButtonMain"
                    android:text="@string/adopt"
                    android:layout_marginTop="44dp"
                    app:layout_constraintTop_toBottomOf="@id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="122dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/meau_marca"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/drw_meau_marca_contdesc"
                    app:layout_constraintTop_toBottomOf="@id/bt_main_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_drawer_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_menu"
        app:menu="@menu/menu_drawer_main" />

</android.support.v4.widget.DrawerLayout>
